Remove support for safe prop in MetaList macro
This can be passed in to the value using the safe filter rather than
requiring a separate property on the item.

--- a/src/app/views/_macros/entity/meta-item.njk
+++ b/src/app/views/_macros/entity/meta-item.njk
@@ -14,7 +14,6 @@
  # @param {string} [props.isLabelHidden=false] - whether the label should be visually hidden
  # @param {string} [props.badgeModifier] - modifier for badge
  # @param {string} [props.highlightTerm] - text to use to apply highlight filter
- # @param {string} [props.safe] - is a safe string
  #}
 {% macro MetaItem (props) %}
   {% set badgeModifier = props.badgeModifier | concat('') | reverse | join(' c-badge--') if props.badgeModifier %}
@@ -32,11 +31,7 @@
       {% set metaItemValue = props.value.name | default(props.value) %}
     {% endif %}
 
-    {% if props.safe %}
-      {% set safeValue = metaItemValue | highlight(props.highlightTerm, true) | safe %}
-    {% else %}
-      {% set safeValue = metaItemValue | highlight(props.highlightTerm, true) %}
-    {% endif %}
+    {% set value = metaItemValue | highlight(props.highlightTerm, true) %}
 
     <div class="{{ 'c-meta-list__item' | applyClassModifiers(props.modifier) }}">
       {% if props.label %}
@@ -49,10 +44,10 @@
           class="js-xhr {{ itemValueClass }} {{ 'is-selected' if props.isSelected }}"
           href="{{ props.url }}"
         >
-          {{- safeValue -}}
+          {{- value -}}
         </a>
       {% else %}
-        <span class="{{ itemValueClass }}">{{ safeValue }}</span>
+        <span class="{{ itemValueClass }}">{{ value }}</span>
       {% endif %}
     </div>
   {% endif %}
