Correct punctuation on complete order message

--- a/src/app/views/order-summary.njk
+++ b/src/app/views/order-summary.njk
@@ -6,7 +6,7 @@
   {% if order.status === 'complete' %}
     {% call Message({ type: 'success', element: 'div' }) %}
       <p>Your order has been completed and you should have received any documents for this order.</p>
-      <p>If there are any problems, get in touch with your DIT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk">omis.orders@digital.trade.gov.uk</a></p>
+      <p>If there are any problems, get in touch with your DIT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk">omis.orders@digital.trade.gov.uk</a>.</p>
     {% endcall %}
   {% endif %}
 
