Add support for a Google Tag Manager suffix
This suffix is to be used for certain environments to help distinguish
them.

It is being marked as safe as will be coming from a variable set on
that environment and can be treated safely.

--- a/src/app/views/_layouts/omis-base.njk
+++ b/src/app/views/_layouts/omis-base.njk
@@ -13,7 +13,7 @@
         var f=d.getElementsByTagName(s)[0],
             j=d.createElement(s),
             dl=l!='dataLayer'?'&l='+l:'';
-        j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;
+        j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl+'{{ GOOGLE_TAG_MANAGER_SUFFIX | safe }}';
         f.parentNode.insertBefore(j,f);
       })(window,document,'script','dataLayer','{{ GOOGLE_TAG_MANAGER_KEY }}');
     </script>
@@ -23,7 +23,7 @@
 {% block body %}
   {% if GOOGLE_TAG_MANAGER_KEY %}
     <noscript>
-      <iframe src="https://www.googletagmanager.com/ns.html?id={{ GOOGLE_TAG_MANAGER_KEY }}" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+      <iframe src="https://www.googletagmanager.com/ns.html?id={{ GOOGLE_TAG_MANAGER_KEY }}{{ GOOGLE_TAG_MANAGER_SUFFIX | safe }}" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
   {% endif %}
 
