Break words based on container size for meta list items

--- a/assets/stylesheets/components/_meta-list.scss
+++ b/assets/stylesheets/components/_meta-list.scss
@@ -20,6 +20,7 @@
 .c-meta-list__item-value {
   color: $text-colour;
   display: inline-block;
+  word-break: break-all;
 
   &:link,
   &:visited {
