--- a/src/app/views/receipt.njk
+++ b/src/app/views/receipt.njk
@@ -30,7 +30,7 @@
   ] | removeNilAndEmpty | join('<br>') %}
 
   <div class="u-clearfix">
-    <div class="u-float-left">
+    <div class="u-float-left u-max-half">
       {{ MetaList({
         items: [
           { label: 'For the attention of', value: billingAddress | safe },
@@ -43,7 +43,7 @@
       }) }}
     </div>
 
-    <div class="u-float-right">
+    <div class="u-float-right u-max-half">
       {{ MetaList({
         items: [
           { label: 'From (charging point)', value: invoiceAddress | safe },
