--- a/src/app/views/order-summary.njk
+++ b/src/app/views/order-summary.njk
@@ -46,10 +46,6 @@
 
   <h2>Your quote</h2>
 
-  {% set expiryLabel %}
-    Expire{{ 'd' if quote.expired else 's' }}
-  {% endset %}
-
   {% set expiryValue %}
     {{ quote.expires_on | formatDate }} ({{ quote.expires_on | fromNow }})
   {% endset %}
@@ -57,7 +53,7 @@
   {{ MetaList({
     items: [
       { label: 'We sent it on', value: quote.created_on, type: 'datetime' },
-      { label: expiryLabel, value: expiryValue if not quote.accepted_on },
+      { label: 'Expiry date', value: expiryValue if not quote.accepted_on },
       { label: 'You accepted it on', value: quote.accepted_on, type: 'datetime' }
     ],
     modifier: 'stacked',
