Add print button support
Adds styles and behaviour to allow a print dialog to be opened from
the current page.

--- a/assets/stylesheets/elements/_base.scss
+++ b/assets/stylesheets/elements/_base.scss
@@ -33,7 +33,8 @@ a {
 
 a,
 input,
-textarea {
+textarea,
+button {
   outline: 3px solid transparent;
 
   &:focus,
@@ -49,4 +50,3 @@ textarea {
 input:focus + label::before {
   outline: none;
 }
-
