Add print button to invoice and receipt

--- a/src/app/views/invoice.njk
+++ b/src/app/views/invoice.njk
@@ -82,6 +82,8 @@
 
   <h3>In case of problems</h3>
 
-  <p>Get in touch with your DIT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk">omis.orders@digital.trade.gov.uk</a></p>
+  <p>Get in touch with your DIT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk">omis.orders@digital.trade.gov.uk</a>.</p>
+
+  <button class="u-icon-print u-no-js-hidden u-print-hide js-print">Print this page</button>
 
 {% endblock  %}
