--- a/src/app/views/receipt.njk
+++ b/src/app/views/receipt.njk
@@ -75,4 +75,6 @@
     }) }}
   {% endfor %}
 
+  <button class="u-icon-print u-no-js-hidden u-print-hide js-print">Print this page</button>
+
 {% endblock  %}
