Handle main content spacing using site-width-container
This uses the site-width-container mixin to handle the spacing
for the container at different widths.

This fixes the issue with inconsistent padding between header
and main content.

--- a/assets/stylesheets/objects/base/_main-content.scss
+++ b/assets/stylesheets/objects/base/_main-content.scss
@@ -9,6 +9,7 @@
 }
 
 .main-content__inner {
+  @include site-width-container;
   padding-top: $default-spacing-unit * 2;
   padding-bottom: $default-spacing-unit * 4;
 
