--- a/src/app/views/_layouts/dit-base.njk
+++ b/src/app/views/_layouts/dit-base.njk
@@ -117,7 +117,7 @@
               {% endif %}
             {% endblock %}
           {% endblock %}
-          <div class="main-content__inner l-container" id="xhr-outlet">
+          <div class="main-content__inner" id="xhr-outlet">
             {% block body_main_content %}{% endblock %}
           </div>
         </main>
