Introduce reading width container
This introduces a default container around content to enforce
a maximum width of content to keep to the optimal number of
characters per line.

https://baymard.com/blog/line-length-readability

--- a/src/app/views/_layouts/omis-base.njk
+++ b/src/app/views/_layouts/omis-base.njk
@@ -34,6 +34,12 @@
   {% endblock %}
 {% endblock %}
 
+{% block body_main_content %}
+  <article class="l-reading-width">
+    {% block main_content %}{% endblock %}
+  </article>
+{% endblock %}
+
 {% block body_footer_content_ogl %}{% endblock %}
 
 {% block body_footer_content_copyright %}{% endblock %}
