--- a/src/app/views/errors.njk
+++ b/src/app/views/errors.njk
@@ -2,7 +2,7 @@
 
 {% set pageTitle = statusMessage %}
 
-{% block body_main_content %}
+{% block main_content %}
   <h1 class="error-heading">
     {{ statusMessage }}
   </h1>
