--- a/src/app/views/order-summary.njk
+++ b/src/app/views/order-summary.njk
@@ -1,6 +1,6 @@
 {% extends '_layouts/omis-base.njk' %}
 
-{% block body_main_content %}
+{% block main_content %}
   <h1>{{ order.reference }}</h1>
 
   {% if order.status === 'complete' %}
