--- a/src/app/views/quote-accepted.njk
+++ b/src/app/views/quote-accepted.njk
@@ -1,6 +1,6 @@
 {% extends '_layouts/omis-base.njk' %}
 
-{% block body_main_content %}
+{% block main_content %}
   <div class="confirmation-banner">
     <h1 class="confirmation-banner__heading">
       Quote accepted
