--- a/src/app/views/quote.njk
+++ b/src/app/views/quote.njk
@@ -1,6 +1,6 @@
 {% extends '_layouts/omis-base.njk' %}
 
-{% block body_main_content %}
+{% block main_content %}
   <p>
     <a href="/{{ publicToken }}">Back to summary</a>
   </p>
