Fix multiple choice form element spacing
Multiple choice options were picking up the top level spacing
which produces a larger gap than desired.

This change adjusts that spacing and gives some breathing room to
the label as well.

--- a/assets/stylesheets/components/form/_form-group.scss
+++ b/assets/stylesheets/components/form/_form-group.scss
@@ -20,6 +20,7 @@
 .c-form-group__label {
   display: table;
   line-height: 1.1;
+  margin-bottom: $baseline-grid-unit * 3;
 
   * + * {
     margin-top: $default-spacing-unit / 2;
