--- a/assets/stylesheets/components/form/_multiple-choice.scss
+++ b/assets/stylesheets/components/form/_multiple-choice.scss
@@ -5,6 +5,10 @@
   position: relative;
   clear: left;
   transform: translateZ(0); // Enforcing GPU acceleration fixes overflow cropping caused by CSS columns
+
+  & + & {
+    margin-top: $default-spacing-unit / 2;
+  }
 }
 
 @mixin _scale-input($font-size) {
