Link up payment journey
This creates links to the payment journey from the other stages
of an order.

--- a/src/app/views/_includes/payment-instructions.njk
+++ b/src/app/views/_includes/payment-instructions.njk
@@ -3,3 +3,9 @@
   <a href="/{{ publicToken }}/invoice">the invoice</a>
   by {{ invoice.payment_due_date | formatDate }} ({{ invoice.payment_due_date | fromNow(invoice.overdue) }}{{ ' overdue' if invoice.overdue }}).
 </p>
+
+<p>
+  <a href="/{{ publicToken }}/payment" class="button">
+    View payment options
+  </a>
+</p>
