Create a payment gateway session
This change creats a payment gateway session to redirect the
payment journey to on a `GET` of the card payment step.

It also updates the card view to simply include a link that is
now set within a piece of middleware rather than containing a
form that posts back to itself.

--- a/src/app/views/payment/card.njk
+++ b/src/app/views/payment/card.njk
@@ -10,9 +10,7 @@
     <strong>{{ order.total_cost | formatCurrency }}</strong>
   </p>
 
-  <form method="post">
-    <input type="hidden" name="_csrf" value="{{ CSRF_TOKEN }}">
-
-    <button type="submit" class="button">Continue to secure payment</button>
-  </form>
+  <p>
+    <a href="{{ paymentUrl }}" class="button">Continue to secure payment</a>
+  </p>
 {% endblock %}
