Check for existing payment gateway session before creating
This refactors the middleware around creating a new payment gateway
session to check for an existing one before creating a new one.

This prevents multiple sessions being created with each page load.

--- a/src/app/views/payment/card.njk
+++ b/src/app/views/payment/card.njk
@@ -11,6 +11,6 @@
   </p>
 
   <p>
-    <a href="{{ paymentUrl }}" class="button">Continue to secure payment</a>
+    <a href="{{ paymentGatewayUrl }}" class="button">Continue to secure payment</a>
   </p>
 {% endblock %}
