--- a/src/app/views/payment/paid.njk
+++ b/src/app/views/payment/paid.njk
@@ -1,9 +1,13 @@
 {% extends '_layouts/omis-base.njk' %}
 
 {% block main_content %}
-  <h1>Your order has already been paid</h1>
+  <p class="u-print-hide">
+    <a href="/{{ publicToken }}">Back to summary</a>
+  </p>
 
-  <p>Your payment was received on {{ order.paid_on | formatDateTime }}.</p>
+  <h1>Your order has already been paid for</h1>
+
+  <p>Your payment was received on {{ order.paid_on | formatDate }}.</p>
 
   <p>
     <a href="/{{ publicToken }}/receipt">View your payment receipt</a>
