Provide alternative route for card payments
This creates a cross link to the bank transfer payment route when on
the card payment route.

We do this on the bank transfer route so this replicates that path in
the journey.

--- a/src/app/views/payment/card.njk
+++ b/src/app/views/payment/card.njk
@@ -13,4 +13,10 @@
   <p>
     <a href="{{ paymentGatewaySession.payment_url }}" class="button">Continue to secure payment service</a>
   </p>
+
+  <h3>Can’t pay by credit or debit card</h3>
+
+  <p>
+    Alternatively, you can <a href="/{{ publicToken }}/payment/bank-transfer">pay by bank transfer</a>.
+  </p>
 {% endblock %}
