Update content for payment options
This ensures we consistently say credit and debit for card payments
and makes the button text for continuing to the payment provider
more readable.

--- a/src/app/views/payment/bank-transfer.njk
+++ b/src/app/views/payment/bank-transfer.njk
@@ -12,6 +12,6 @@
   <h3>Can't pay by bank transfer</h3>
 
   <p>
-    Alternatively, you can <a href="/{{ publicToken }}/payment/card">pay by card</a>.
+    Alternatively, you can <a href="/{{ publicToken }}/payment/card">pay by credit or debit card</a>.
   </p>
 {% endblock %}
