--- a/src/app/views/payment/card.njk
+++ b/src/app/views/payment/card.njk
@@ -11,6 +11,6 @@
   </p>
 
   <p>
-    <a href="{{ paymentGatewaySession.payment_url }}" class="button">Continue to secure payment</a>
+    <a href="{{ paymentGatewaySession.payment_url }}" class="button">Continue to secure payment service</a>
   </p>
 {% endblock %}
