Display the full payment reference
This uses the payment reference from the payments endpoint rather
than just the order reference number on the payment confirmation page.

This is so that the reference number matches the one sent to the
user in an email and also so it will be easier for the Live Service
Team to debug and possible problems.

--- a/src/app/views/payment/success.njk
+++ b/src/app/views/payment/success.njk
@@ -9,7 +9,7 @@
     <p>
       Your reference number is
       <strong class="confirmation-banner__referene">
-        {{ order.reference }}
+        {{ payments[0].transaction_reference or order.reference }}
       </strong>
     </p>
   </div>
