--- a/src/app/views/quote.njk
+++ b/src/app/views/quote.njk
@@ -15,38 +15,31 @@
 
   <h1>Your quote ({{ order.reference }})</h1>
 
+  {% set expiryValue %}
+    {{ quote.expires_on | formatDate }} ({{ quote.expires_on | fromNow }})
+  {% endset %}
+
   {{ MetaList({
     items: [
       { label: 'We sent it on', value: quote.created_on, type: 'datetime' },
+      { label: 'It will expire on', value: expiryValue if not quote.cancelled_on and not quote.expired and not quote.accepted_on },
+      { label: 'You accepted it on', value: quote.accepted_on, type: 'datetime' },
       { label: 'Purchase order (PO) number', value: order.po_number }
     ],
+    modifier: 'stacked',
     itemModifier: 'stacked'
   }) }}
 
-  {% if quote.cancelled_on %}
+  {% if quote.expired or quote.cancelled_on %}
     {% call Message({ type: 'error', element: 'div' }) %}
-      <p>This quote is no longer valid.</p>
+      {% if quote.cancelled_on %}
+        <p>This quote is no longer valid.</p>
+      {% else %}
+        <p>This quote expired on {{ quote.expires_on | formatDate }} ({{ quote.expires_on | fromNow }}).</p>
+      {% endif %}
+
       <p>Get in touch with your DIT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk">omis.orders@digital.trade.gov.uk</a>.</p>
     {% endcall %}
-  {% else %}
-    {% if quote.accepted_on %}
-      {{ Message({
-        type: 'success',
-        text: 'You accepted this quote on ' + quote.accepted_on | formatDateTime
-      }) }}
-    {% endif %}
-
-    {% if not quote.accepted_on %}
-      {% call Message({
-        type: 'error' if quote.expired else 'info',
-        element: 'div'
-      }) %}
-        <p>This quote {{ 'expired' if quote.expired else 'will expire' }} on {{ quote.expires_on | formatDate }} ({{ quote.expires_on | fromNow }}).</p>
-        {% if quote.expired %}
-          <p>Get in touch with your DIT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk">omis.orders@digital.trade.gov.uk</a>.</p>
-        {% endif %}
-      {% endcall %}
-    {% endif %}
   {% endif %}
 
   {% if quote.content %}
