--- a/src/app/views/quote.njk
+++ b/src/app/views/quote.njk
@@ -13,6 +13,7 @@
     }) }}
   {% endif %}
 
+  <a name="terms-and-conditions" id="terms-and-conditions"></a>
   <h1>Your quote ({{ order.reference }})</h1>
 
   {% set expiryValue %}
@@ -50,6 +51,7 @@
         {% call Reveal({ summary: 'View full terms and conditions' }) %}
 {# Ugly indentation is so that markdown spacing is handled correctly #}
 {% markdown %}{{ quote.terms_and_conditions | safe }}{% endmarkdown %}
+          <p><a href="#terms-and-conditions">Back to top</a></p>
         {% endcall %}
       </div>
     </article>
