--- a/assets/stylesheets/components/_button.scss
+++ b/assets/stylesheets/components/_button.scss
@@ -1,17 +1,18 @@
 @import "~govuk_frontend_toolkit/stylesheets/design-patterns/buttons";
-@import "../settings";
-@import "../tools";
+@import "../settings/colours";
+
+// Buttons
+// ==========================================================================
 
 .button {
   @include button ($button-colour);
-  vertical-align: top;
+  padding-bottom: .526315em;
 
   @include media (mobile) {
     width: 100%;
     text-align: center;
   }
 }
-
 
 // Fix unwanted button padding in Firefox
 .button::-moz-focus-inner {
@@ -23,30 +24,19 @@
   outline: 3px solid $focus-colour;
 }
 
-
-// Disabled buttons
-.button[disabled="disabled"] {
-  background: $button-colour;
-}
-
 .button[disabled="disabled"]:focus {
   outline: none;
 }
 
-
 // modifiers
 .button--secondary {
   @include button ($grey-2);
-
-  &:link,
-  &:visited {
-    background-color: $grey-2;
-    color: $black;
-  }
+  padding-bottom: .526315em;
 }
 
 .button--destructive {
   @include button($red);
+  padding-bottom: .526315em;
 }
 
 .button--link {
@@ -70,4 +60,8 @@
   &:hover {
     color: $link-hover-colour;
   }
+}
+
+.button--compact {
+  padding: 0;
 }
