Reduce sizing of sub-headings
Second and third level headings looked very large in the current
font style so this change drops the size of the sub heading styles
to give more contrast from the main heading.

--- a/assets/stylesheets/elements/_heading.scss
+++ b/assets/stylesheets/elements/_heading.scss
@@ -5,17 +5,17 @@ h1 {
 }
 
 h2 {
-  @include bold-font(36);
-}
-
-h3 {
   @include bold-font(24);
 }
 
-h4 {
+h3 {
   @include bold-font(20);
 }
 
-h5 {
+h4 {
   @include bold-font(16);
+}
+
+h5 {
+  @include core-font(16);
 }
