Add local header style component
This creates the styles for a simple local header.

--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -1,6 +1,7 @@
 @import "components/.example";
 @import "components/button";
 @import "components/confirmation-banner";
+@import "components/local-header";
 @import "components/messages";
 @import "components/meta-list";
 
