--- a/assets/stylesheets/components/_meta-list.scss
+++ b/assets/stylesheets/components/_meta-list.scss
@@ -1,25 +1,19 @@
 @import "../settings";
 @import "../tools";
 
-.c-meta-list {
-  display: table;
-}
-
 .c-meta-list__item {
-  display: inline-block;
-
   & + & {
-    margin-left: $baseline-grid-unit;
+    margin-top: $default-spacing-unit / 4;
   }
 }
 
 .c-meta-list__item-label {
   color: $grey-1;
+  word-break: break-all;
 }
 
 .c-meta-list__item-value {
   color: $text-colour;
-  display: inline-block;
   word-break: break-all;
 
   &:link,
@@ -39,13 +33,31 @@
 // Modifiers
 
 .c-meta-list--inline {
+  display: inline-block;
+  margin-top: -($default-spacing-unit / 2);
+
   .c-meta-list__item-label {
     display: inline-block;
   }
 
   .c-meta-list__item {
-    margin-top: $baseline-grid-unit;
-    margin-right: $default-spacing-unit;
+    display: inline-block;
+    margin-right: $default-spacing-unit * 2;
+    margin-top: $default-spacing-unit / 2;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
+
+.c-meta-list--condensed {
+  &.c-meta-list--inline .c-meta-list__item {
+    margin-right: $default-spacing-unit / 4;
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
 
@@ -53,38 +65,25 @@
   display: block;
 
   & + & {
-    margin-left: 0;
     margin-top: $default-spacing-unit / 2;
-  }
-
-  @include media-query(tablet) {
-    display: inline-block;
-
-    & + & {
-      margin-left: $default-spacing-unit * 2;
-      margin-top: 0;
-    }
   }
 
   .c-meta-list__item-label {
     display: block;
   }
-
-  .c-meta-list__item-value {
-    margin-top: 0;
-  }
 }
 
 .c-meta-list--split {
   @include clearfix;
+  margin-top: -($default-spacing-unit / 4);
   width: 100%;
 
   .c-meta-list__item {
     display: block;
-    margin-left: 0;
+    margin-top: $default-spacing-unit / 4;
   }
 
-  @include media-query(tablet) {
+  @include media(tablet) {
     .c-meta-list__item:nth-child(odd) {
       float: left;
       clear: both;
@@ -93,20 +92,9 @@
 
     .c-meta-list__item:nth-child(even) {
       float: right;
-      margin-right: 0;
+      text-align: right;
+      max-width: 50%;
     }
   }
 }
 
-.c-meta-list--stacked {
-  display: block;
-
-  .c-meta-list__item {
-    display: block;
-  }
-
-  .c-meta-list__item + .c-meta-list__item {
-    margin-left: 0;
-    margin-top: $default-spacing-unit / 2;
-  }
-}
