Add support for a local header
This adds a local header area to the base OMIS template that can
be shared as a consistent place to add a page title and basic
navigation.

--- a/src/app/views/_layouts/omis-base.njk
+++ b/src/app/views/_layouts/omis-base.njk
@@ -36,6 +36,24 @@
 
 {% block body_main_content %}
   <article class="l-reading-width">
+    {% if heading or subHeading %}
+      <header class="local-header">
+        {% if not hideReturnLink %}
+          <p class="local-header__back u-print-hide">
+            <a href="/{{ publicToken }}">Return to overview</a>
+          </p>
+        {% endif %}
+
+        {% if heading %}
+          <h1 class="local-header__heading">{{ heading }}</h1>
+        {% endif %}
+
+        {% if subHeading %}
+          <p class="local-header__subheading">{{ subHeading }}</p>
+        {% endif %}
+      </header>
+    {% endif %}
+
     {% block main_content %}{% endblock %}
   </article>
 {% endblock %}
