Update views to use local header
This updates the majority of views to use the new local header
area to display the page title and back navigation.

--- a/src/app/views/errors.njk
+++ b/src/app/views/errors.njk
@@ -1,12 +1,10 @@
 {% extends '_layouts/omis-base.njk' %}
 
+{% set hideReturnLink = true %}
 {% set pageTitle = statusMessage %}
+{% set heading = statusMessage %}
 
 {% block main_content %}
-  <h1 class="error-heading">
-    {{ statusMessage }}
-  </h1>
-
   {%- if statusCode == '404' -%}
     <p>
       The resource you were looking for could not be found.
