--- a/src/app/views/payment/card.njk
+++ b/src/app/views/payment/card.njk
@@ -1,8 +1,8 @@
 {% extends '_layouts/omis-base.njk' %}
 
-{% block main_content %}
-  <h1>Paying by credit or debit card</h1>
+{% set heading = 'Paying by credit or debit card' %}
 
+{% block main_content %}
   <p>Credit and debit card payments are made through the government’s secure payment service.</p>
 
   <p>
