--- a/src/app/views/index.njk
+++ b/src/app/views/index.njk
@@ -1,9 +1,9 @@
 {% extends '_layouts/omis-base.njk' %}
 
-{% set pageTitle='Homepage' %}
+{% set hideReturnLink = true %}
+{% set pageTitle = 'Overseas Market Introduction Service' %}
+{% set heading = 'About this service' %}
 
 {% block main_content %}
-  <h1>About this service</h1>
-
   <p>The Overseas Market Introduction Service (OMIS) can help you find overseas customers using the Department for International Trade’s (DIT) network of trade specialists. Find out more about <a href="https://www.gov.uk/overseas-customers-export-opportunities/trade-specialist-help">getting help from a trade specialist</a>.</p>
 {% endblock  %}
