--- a/src/app/views/payment/options.njk
+++ b/src/app/views/payment/options.njk
@@ -1,8 +1,8 @@
 {% extends '_layouts/omis-base.njk' %}
 
-{% block main_content %}
-  <h1>Paying for your order</h1>
+{% set heading = 'Paying for your order' %}
 
+{% block main_content %}
   {% if invalid %}
     {{ ErrorSummary({
       messages: {
