--- a/src/app/views/receipt.njk
+++ b/src/app/views/receipt.njk
@@ -1,8 +1,8 @@
 {% extends '_layouts/omis-base.njk' %}
 
 {% block body_main_content %}
-  <p class="u-print-hide">
-    <a href="/{{ publicToken }}">Back to summary</a>
+  <p class="local-header__back u-print-hide">
+    <a href="/{{ publicToken }}">Return to overview</a>
   </p>
 
   <img src="{{ getAssetPath('images/dit-invoice-logo.png') }}" width="200"><br>
