--- a/src/app/views/_includes/meta-lists/quote.njk
+++ b/src/app/views/_includes/meta-lists/quote.njk
@@ -2,13 +2,13 @@
   {{ quote.expires_on | formatDate }} ({{ quote.expires_on | fromNow }})
 {% endset %}
 
+{% set expiryLabel = 'It ' + ('expired' if quote.expired else 'will expire') + ' on' %}
+
 {{ MetaList({
   items: [
     { label: 'We sent it on', value: quote.created_on, type: 'datetime' },
-    { label: 'It will expire on', value: expiryValue if not quote.accepted_on },
+    { label: expiryLabel, value: expiryValue if not quote.accepted_on },
     { label: 'You accepted it on', value: quote.accepted_on, type: 'datetime' },
     { label: 'Purchase order (PO) number', value: order.po_number }
-  ],
-  modifier: 'stacked',
-  itemModifier: 'stacked'
+  ]
 }) }}
