--- a/assets/stylesheets/objects/base/_notification-banner.scss
+++ b/assets/stylesheets/objects/base/_notification-banner.scss
@@ -8,5 +8,6 @@
 .notification-banner__inner {
   @include site-width-container;
   padding: $default-spacing-unit 0;
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
