Create local cookies page
Rather than link to the GOV.UK cookies page which stores different
cookies we need to create our own and link to that instead.

--- a/src/app/views/_layouts/dit-base.njk
+++ b/src/app/views/_layouts/dit-base.njk
@@ -69,7 +69,7 @@
         <div class="notification-banner u-js-hidden u-print-hide" id="global-cookies-banner" role="alert">
           <p class="notification-banner__inner">
             GOV.UK uses cookies to make the site simpler.
-            <a href="https://www.gov.uk/help/cookies">Find out more about cookies</a>
+            <a href="/cookies">Find out more about cookies</a>
           </p>
         </div>
       {% endblock %}
@@ -131,7 +131,7 @@
                 <h2 class="u-visually-hidden">Support links</h2>
                 <ul class="list-inline">
                   <li>
-                    <a href="https://www.gov.uk/help/cookies">Cookies</a>
+                    <a href="/cookies">Cookies</a>
                   </li>
                 </ul>
                 {% block body_footer_content_ogl %}
