Tweak assembly of link lists
This tweaks the spacing when an unstyled list is used next to a
meta list so that the actions are better associated.

--- a/assets/stylesheets/layout/_assemblies.scss
+++ b/assets/stylesheets/layout/_assemblies.scss
@@ -51,6 +51,10 @@ p + p {
   margin-top: $default-spacing-unit;
 }
 
+.c-meta-list + .list-unstyled {
+  margin-top: $baseline-grid-unit;
+}
+
 .u-clearfix {
   > * {
     @include media-query(tablet) {
