--- a/src/app/views/quote.njk
+++ b/src/app/views/quote.njk
@@ -16,20 +16,7 @@
   <a name="terms-and-conditions" id="terms-and-conditions"></a>
   <h1>Your quote ({{ order.reference }})</h1>
 
-  {% set expiryValue %}
-    {{ quote.expires_on | formatDate }} ({{ quote.expires_on | fromNow }})
-  {% endset %}
-
-  {{ MetaList({
-    items: [
-      { label: 'We sent it on', value: quote.created_on, type: 'datetime' },
-      { label: 'It will expire on', value: expiryValue if not quote.cancelled_on and not quote.expired and not quote.accepted_on },
-      { label: 'You accepted it on', value: quote.accepted_on, type: 'datetime' },
-      { label: 'Purchase order (PO) number', value: order.po_number }
-    ],
-    modifier: 'stacked',
-    itemModifier: 'stacked'
-  }) }}
+  {% include '_includes/meta-lists/quote.njk' %}
 
   {% if quote.expired or quote.cancelled_on %}
     {% include '_includes/messages/quote-invalid.njk' %}
