--- a/src/app/views/receipt.njk
+++ b/src/app/views/receipt.njk
@@ -2,6 +2,7 @@
 
 {% set heading = 'Receipt' %}
 {% set creationDateLabel = 'Receipt date' %}
+{% set creationDateValue = order.paid_on %}
 
 {% block invoice_payment_information %}
   <h2 class="heading-medium">
