--- a/src/app/views/_includes/bank-transfer-instructions.njk
+++ b/src/app/views/_includes/bank-transfer-instructions.njk
@@ -3,12 +3,15 @@
 <p>
   <strong>Account Name:</strong> DIT OMIS Service<br>
   <strong>Account Number:</strong> 10014187<br>
-  <strong>Sort Code:</strong> 60-70-80
+  <strong>Sort Code:</strong> 60-70-80<br>
+  <strong>Reference:</strong> {{ order.reference }}
 </p>
+
+<p>For international payments you may also need SWIFT and IBAN.</p>
 
 <p>
   <strong>SWIFT:</strong> NWBKGB2L<br>
   <strong>IBAN:</strong> GB57NWBK60708010014187
 </p>
 
-<p>You agree to pay any bank charges incurred with this transaction. You must quote your order number, <strong>{{ order.reference }}</strong>, when arranging the payment. Please send a copy of your Payment Remittance Advice which must show your payment reference to the above Charging Point.</p>
+<p>You agree to pay any bank charges incurred with this transaction.</p>
