--- a/src/app/views/quote-accepted.njk
+++ b/src/app/views/quote-accepted.njk
@@ -21,6 +21,6 @@
   {% include '_includes/payment-instructions.njk' %}
 
   <p>
-    <a href="/{{ publicToken }}">Return to overview</a>
+    <a href="/{{ publicToken }}">View your order history</a>
   </p>
 {% endblock  %}
