--- a/src/app/views/_layouts/invoice.njk
+++ b/src/app/views/_layouts/invoice.njk
@@ -23,7 +23,7 @@
 
 {% block body_main_content %}
   <p class="local-header__back u-print-hide">
-    <a href="/{{ publicToken }}">Return to overview</a>
+    <a href="/{{ publicToken }}">View your order history</a>
   </p>
 
   <img src="{{ getAssetPath('images/dit-invoice-logo.png') }}" width="200"><br>
