Display links in print view
This change adds a bit of CSS to use the value of the href attribute
to output the link destination when printing.

This allows people to still be able to visit the URL if they only have
a printed copy of the page.

--- a/assets/stylesheets/app.print.scss
+++ b/assets/stylesheets/app.print.scss
@@ -1,3 +1,25 @@
 $is-print: true;
 
+a[href^="/"],
+a[href^="http://"],
+a[href^="https://"] {
+  &:after {
+    content: " (" attr(href) ")";
+    font-size: 90%;
+  }
+}
+
+a[href^="/"]:after {
+  content: " (https://omis.trade.gov.uk/" attr(href) ")";
+  font-size: 90%;
+}
+
+a[href^="javascript:"],
+a[href^="#"],
+a.global-header__link {
+  &:after {
+    content: "";
+  }
+}
+
 @import "app";
