--- a/assets/stylesheets/components/_messages.scss
+++ b/assets/stylesheets/components/_messages.scss
@@ -66,7 +66,7 @@
   font-size: inherit;
   font-weight: inherit;
 
-  *:not(button) {
+  *:not(button):not(strong) {
     font-weight: inherit;
   }
 }
