Upgrade to webpack 4

--- a/assets/stylesheets/elements/_base.scss
+++ b/assets/stylesheets/elements/_base.scss
@@ -15,7 +15,7 @@ body {
 
 a {
   color: $link-colour;
-  text-decoration-skip: ink;
+  text-decoration-skip-ink: auto;
   outline-color: transparent;
 
   &:hover {
