Update DIT content to use DBT

--- a/src/app/views/_layouts/dit-base.njk
+++ b/src/app/views/_layouts/dit-base.njk
@@ -1,4 +1,4 @@
-{%- set titleDefault = 'Department for International Trade' -%}
+{%- set titleDefault = 'Department for Business & Trade' -%}
 <!DOCTYPE html>
 <html lang="en" class="no-js">
   <head>
