--- a/src/app/views/_layouts/invoice.njk
+++ b/src/app/views/_layouts/invoice.njk
@@ -26,7 +26,7 @@
     <a href="/{{ publicToken }}">View your order history</a>
   </p>
 
-  <img src="{{ getAssetPath('images/dit-invoice-logo.png') }}" width="200"><br>
+  <img src="{{ getAssetPath('images/dbt-invoice-logo.png') }}" width="200"><br>
 
   <h1>{{ heading | default('Invoice') }}</h1>
 
