--- a/src/app/views/_includes/bank-transfer-instructions.njk
+++ b/src/app/views/_includes/bank-transfer-instructions.njk
@@ -1,7 +1,7 @@
-<p>Please make your payment in sterling for <strong>{{ order.total_cost | formatCurrency }}</strong> to Department for International Trade’s bank account at National Westminster Bank.</p>
+<p>Please make your payment in sterling for <strong>{{ order.total_cost | formatCurrency }}</strong> to Department for Business & Trade’s bank account at National Westminster Bank.</p>
 
 <p>
-  <strong>Account Name:</strong> DIT OMIS Service<br>
+  <strong>Account Name:</strong> DBT OMIS Service<br>
   <strong>Account Number:</strong> 10014187<br>
   <strong>Sort Code:</strong> 60-70-80<br>
   <strong>Reference:</strong> {{ order.reference }}
