--- a/src/app/views/_includes/messages/legacy-invoice.njk
+++ b/src/app/views/_includes/messages/legacy-invoice.njk
@@ -1,5 +1,5 @@
 {% call Message({ type: 'muted', element: 'div' }) %}
   <p>
-    To view your invoice, get in touch with your DIT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk">omis.orders@digital.trade.gov.uk</a>.
+    To view your invoice, get in touch with your DBT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk">omis.orders@digital.trade.gov.uk</a>.
   </p>
 {% endcall %}
