--- a/src/app/views/_includes/messages/legacy-quote.njk
+++ b/src/app/views/_includes/messages/legacy-quote.njk
@@ -1,3 +1,3 @@
 {% call Message({ type: 'muted' }) %}
-  To view your quote, get in touch with your DIT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk">omis.orders@digital.trade.gov.uk</a>.
+  To view your quote, get in touch with your DBT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk">omis.orders@digital.trade.gov.uk</a>.
 {% endcall %}
