--- a/src/app/views/_includes/messages/order-complete.njk
+++ b/src/app/views/_includes/messages/order-complete.njk
@@ -1,5 +1,5 @@
 {% call Message({ type: 'success', element: 'div' }) %}
   <p>Your order has been completed and you should have received any documents for this order.</p>
 
-  <p>If there are any problems, get in touch with your DIT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk">omis.orders@digital.trade.gov.uk</a>.</p>
+  <p>If there are any problems, get in touch with your DBT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk">omis.orders@digital.trade.gov.uk</a>.</p>
 {% endcall %}
