--- a/src/app/views/invoice.njk
+++ b/src/app/views/invoice.njk
@@ -19,5 +19,5 @@
 
   <h3>In case of problems</h3>
 
-  <p>Get in touch with your DIT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk">omis.orders@digital.trade.gov.uk</a>.</p>
+  <p>Get in touch with your DBT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk">omis.orders@digital.trade.gov.uk</a>.</p>
 {% endblock %}
